--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "homepage": "https://apelsin16.github.io/test-topsofter/build/"
 }
